# kd

./: Cargo.toml
src/: actor.rs  character.rs  config.rs  lib.rs  main.rs  music.rs  show.rs  show_collection.rs
src/controllers/: character.rs  mod.rs  show.rs
src/korean/: utils.rs
src/models/: character.rs  mod.rs  show.rs  show_collection.rs
