[package]
name = "kd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
dirs = "4.0.0"
dotenv = "0.15.0"
num-format = "0.4.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
serde_json = "1.0.83"
inquire = "0.3.0-alpha.2"